<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_groups">

    <fragment
        android:id="@+id/nav_groups"
        android:name="mihaic.com.example.house_tasks_admin.ui.admin.groups.GroupsFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_usersAndRulesFragment"
            app:destination="@id/nav_users_rules" />
        <action
            android:id="@+id/action_nav_groups_to_nav_groupsearch"
            app:destination="@id/nav_group_search" />
    </fragment>

    <fragment
        android:id="@+id/nav_group_search"
        android:name="mihaic.com.example.house_tasks_admin.ui.admin.groupsearch.GroupSearchFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="mihaic.com.example.house_tasks_admin.ui.admin.rulesfeed.RulesFeedFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="mihaic.com.example.house_tasks_admin.ui.admin.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="mihaic.com.example.house_tasks_admin.ui.admin.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="mihaic.com.example.house_tasks_admin.ui.admin.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_users_rules"
        android:name="mihaic.com.example.house_tasks_admin.ui.admin.groups.groupoverview.UsersAndRulesFragment"
        android:label="UsersAndRulesFragment" >
        <argument
            android:name="groupId"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_usersAndRulesFragment_to_rulesItemsFragment2"
            app:destination="@id/nav_rules_items" />
    </fragment>
    <fragment
        android:id="@+id/nav_rules_items"
        android:name="mihaic.com.example.house_tasks_admin.ui.admin.groups.rule_items.RulesItemsFragment"
        android:label="RulesItemsFragment" >
        <argument
            android:name="ruleName"
            app:argType="string" />
        <argument
            android:name="ruleId"
            app:argType="string"
            app:nullable="true" />
    </fragment>
</navigation>